styles/apps.css
/* ... */
.gga-group .options-drawer {
  display: grid;
  grid-template-columns: min-content 1fr;
  grid-auto-rows: auto;
  align-items: center;
  margin-bottom: 3px;
}

.gga-group .collapsible-content {
  grid-column: 1 / span 2;
  /* background: rgba(0, 0, 0, 0.1); */
  margin-bottom: 0;
  padding-right: 4px;
}

.gga-app .collapsible-wrapper .collapsible-content .content-inner > *:nth-child(even),
.gga-group .collapsible-content > *:nth-child(even) {
  background: rgba(255, 255, 255, 0.25);
}

.gga-group .options-drawer label {
  padding-top: 2px;
}

.gga-group .options-drawer label .pdflink {
  float: right;
  padding-top: 2px;
}

.gga-group .options-drawer .toggle:checked + .label-toggle + .collapsible-content,
.gga-app .collapsible-wrapper .collapsible-content {
  box-shadow:
    1px 1px 3px rgba(0, 0, 0, 0.3) inset,
    0px 1px 3px rgba(0, 0, 0, 0.3) inset,
    0px 1px 3px rgba(0, 0, 0, 0.3) inset;
}

.gga-group .options-drawer .toggle:checked + .label-toggle + .collapsible-content {
  max-height: 130vh;
}

.gga-app button {
  text-transform: uppercase;
  background: rgba(255, 255, 240, 0.8);
}

.gga-app button.default {
  border: 2px solid #6b6857;
}

.gga-app button:disabled {
  color: lightslategray;
  background: rgba(255, 255, 240, 0.3);
}

.gga-app button.with-icon > i > span {
  /* font-family: var(--font-family-icons); */
  font-weight: 400;
}

.gga-app * {
  font-family: Roboto, sans-serif, 'Font Awesome 6 Pro';
}

.gga-app .fa,
.gga-app .fab,
.gga-app .fad,
.gga-app .fal,
.gga-app .far,
.gga-app .fas {
  font-family: var(--font-family-icons);
}

.gga-app #blunt-trauma-field {
  margin-left: 6px;
}

.gurps .ranged_options {
  display: flex;
  flex-wrap: no-wrap;
}

.dragging {
  outline: 5px auto -webkit-focus-ring-color;
  box-shadow:
    0 0 2px 3px #78aeda,
    0 0 2px #78aeda inset;
  border-radius: 3px;
  background-color: rgba(240, 128, 128, 0.6);
}

#combat-sheet .resource-spinner button {
  height: 21px;
}

#combat-sheet .resource-spinner input {
  height: 21px;
  font-size: var(--font-size-smaller);
}

#combat-sheet .tracked-resource {
  border: 1px solid black;
  background: white;
}

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
  /* If you want dots under the hoverable text */
  border-bottom: 1px dotted grey;
  /* text-transform: uppercase; */
  /* color: darkgrey */
  /* font-family: var(--font-family-icons); */
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  /* min-width: 120px; */
  background-color: #555;
  color: white;
  text-align: center;
  padding: 5px;
  border-radius: 6px;
  font-weight: normal;
  text-shadow: none;
  box-shadow:
    0 4px 6px -1px rgba(0, 0, 0, 0.5),
    0 2px 4px -1px rgba(0, 0, 0, 0.3);
  font-family: 'Roboto Condensed', Helvetica, sans-serif;

  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  top: 1.4em;
  left: 0;
  /* margin-left: -60px; */

  /* Fade in tooltip */
  opacity: 0;
  transition: opacity 0.67s;
}

/* Tooltip arrow */
.tooltip .tooltiptext::after {
  content: '';
  position: absolute;
  top: -10px;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #555 transparent;

  /* box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.5), 0 2px 4px -1px rgba(0, 0, 0, 0.3); */
}

/* Tooltip arrow */
.tooltip .tooltiptext.gga-manual::after {
  content: '';
  position: absolute;
  top: 100%;
  left: 50%;
  width: 0;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext:not(.gga-manual) {
  visibility: visible;
}

.tooltip:hover .tooltiptext {
  transition-property: visibility;
  transition-delay: 0.67s;
  opacity: 1;
}

#notes .tooltip.gga-manual,
#ranged .tooltip.gga-manual,
#melee .tooltip.gga-manual,
#advantages .tooltip.gga-manual,
#skills .tooltip.gga-manual,
#spells .tooltip.gga-manual,
.equipmentlist .tooltip.gga-manual {
  border: none;
  width: 100%;
}

#notes .tooltiptext.gga-manual,
#ranged .tooltiptext.gga-manual,
#melee .tooltiptext.gga-manual,
#advantages .tooltiptext.gga-manual,
#skills .tooltiptext.gga-manual,
#spells .tooltiptext.gga-manual,
.equipmentlist .tooltiptext.gga-manual {
  padding: 0;
  top: auto;
  bottom: 100%;
  background-color: #555;
  left: calc(100% - 35px);
  min-width: unset;
}

#notes .tooltiptext.gga-manual > img,
#ranged .tooltiptext.gga-manual > img,
#melee .tooltiptext.gga-manual > img,
#advantages .tooltiptext.gga-manual > img,
#skills .tooltiptext.gga-manual > img,
#spells .tooltiptext.gga-manual > img,
.equipmentlist .tooltiptext.gga-manual > img {
  border: none;
  max-height: 100px;
}

.fieldblock3 .tooltip-wrapper {
  grid-column: 1 / span 2;
}

.tooltip .fieldblock .field {
  border: none !important;
}

#npc-sheet .field select,
#combat-sheet .field select,
#sheet .field select,
#sheet-tab .field select {
  height: min-content;
  margin: 0;
  width: 100%;
  font-size: var(--font-size-12);
  cursor: pointer;
}

#encumbrance .header select#move-mode,
#encumbrance .header button#edit-move-modes {
  background: rgba(255, 255, 255, 0.9);
  font-size: 90%;
  margin: 2px 0;
  border: 1px solid var(--color-border-light-tertiary);
}

#encumbrance #edit-move-modes {
  padding-bottom: 1px;
  color: white;
  line-height: unset;
  width: unset;
  font-size: 90%;
}

#editorsheet .field select {
  height: min-content;
  padding: 0 1em 0 0;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: var(--font-size-small);
  cursor: inherit;
  line-height: inherit;
}

.field textarea {
  font-family: inherit;
  font-size: var(--font-size-smaller);
  border-radius: 0;
  border: 1px solid lightgrey;
  padding: 3px;
  resize: none;
  /* background-color: transparent; */
  margin-top: 3px;
}

.field textarea:read-only {
  background-color: transparent;
}
/* ... */

